app/account/profile/Profile.module.sass
div.content
    width: 100%
    min-height: 100%
    @media screen and (max-width: 600px)
        padding-bottom: 100px
    & h1.title
        font-size: 20px
        font-weight: 500
        margin: 0
    & p.description
        font-size: 14px
        margin: 5px 0
    & div.profile
        display: flex
        gap: 150px
        padding: 20px 0
        @media screen and (max-width: 1400px)
            gap: 50px
        @media screen and (max-width: 800px)
            flex-direction: column-reverse
            gap: 30px
    & form
        max-width: 600px
        display: flex
        flex-direction: column
        gap: 10px
        @media screen and (max-width: 800px)
            max-width: 100%
        & label p
            gap: 1px
        & label
            & input[type=text], input[type=url], textarea
                padding: 10px
        & div.avatar
            display: flex
            flex-direction: column-reverse
            width: 100%
            gap: 4px
            position: relative
            & p
                font-weight: 500
                margin: 0
                color: var(--font-st)
                transition: color .15s linear
                display: flex
                flex-direction: column
                gap: 0px
                font-size: 16px
                & span
                    font-size: 14px
                    font-weight: 400
            & label
                cursor: pointer
                display: flex
                align-items: center
                gap: 10px
                margin: 2px 0
                &:hover
                    & span
                        text-decoration: underline
                & img
                    border-radius: 50%
                & div.dynamic
                    & span
                        font-size: 16px
                        font-weight: 500
                        color: var(--primary)
                        background: var(--background)
                        position: relative
                        z-index: 2
                        padding: 5px 0
                        padding-right: 10px
                    & input
                        margin-left: -75px
                        opacity: .9
                        font-size: 14px
                        @media screen and (max-width: 437px)
                            opacity: 0
                            position: absolute
                            top: 0
                            width: 0
                            left: 0
                            height: 0
                            visibility: hidden
    & aside
        max-width: 350px
        width: 100%
        @media screen and (max-width: 800px)
            max-width: 100%
        & h1
            font-size: 16px
            font-weight: 500
            margin: 0
            margin-bottom: 10px
        & div.profile
            display: flex
            flex-direction: column
            gap: 10px
            background: var(--primary-container)
            color: var(--on-primary-container)
            padding: 15px
            border-radius: 12px
            width: 100%
            max-width: 350px
            box-sizing: border-box
            @media screen and (max-width: 800px)
                margin: 0 auto
            & img
                border-radius: 50%
            & h1
                font-size: 24px
                font-weight: 500
                margin: 0
                display: flex
                align-items: center
                gap: 8px
                user-select: text
                & span
                    font-size: 14px
            & h2
                font-size: 14px
                font-weight: 500
                margin: 0
            & div.section
                display: flex
                flex-direction: column
                gap: 2px
                & p
                    font-size: 16px
                    margin: 0
                    user-select: text
                & a
                    color: var(--primary)
                    font-weight: 500
                    text-decoration: none
                    user-select: text
                    &:hover
                        text-decoration: underline
            & div.footer
                display: flex
                justify-content: space-between
                align-items: center
                margin-top: 5px
                & span
                    font-size: 12px
                    opacity: .9
                    user-select: text

div.buttons
    display: flex
    align-items: center
    gap: 8px
    padding: 10px 0
    & button
        font-size: 14px
        padding: 8px
        border-radius: 10px
        position: relative
        &.loading
            width: 80px
            height: 33px
            display: flex
            align-items: center
            justify-content: center
            & div::first
                position: absolute
                top: 50%
                left: 50%
                transform: translate(-50%, -50%)
        &.primary
            background: var(--primary)
            color: var(--on-primary)
            &:hover
                background: var(--secondary)
                color: var(--on-secondary)

